spec/fixtures/modules/error/plans/catch_plan.pp
plan error::catch_plan {
  $foo = Error['oops']
 run_plan('error::err', '_catch_errors' => true)
}
